--- a/BinocularPhotoViewer/MainWindow.xaml
+++ b/BinocularPhotoViewer/MainWindow.xaml
@@ -1,13 +1,20 @@
 ﻿<Window x:Class="BinocularPhotoViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="btnAdd" Content="Add Images" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="188,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="365,10,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click"/>
-        <Label Content="Enter Number of Images" Margin="20,52,353.4,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNumImages" HorizontalAlignment="Left" Height="23" Margin="188,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="252"/>
+        Title="MainWindow" Height="525" Width="525">
+    <Grid Margin="0,0,0.4,-29.2">
+        <Button x:Name="btnAdd" Content="Select Images" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="75" Click="btnAdd_Click"/>
+        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="188,10,0,0" VerticalAlignment="Top" Width="75" Click="btnClear_Click"/>
+        <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="393,10,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click"/>
+        <Label Content="Enter No. of Training Images" Margin="20,52,307,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumTrainingImages" HorizontalAlignment="Left" Height="23" Margin="216,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="252"/>
+
+        <Label Content="Enter No. of Task 1 Images" Margin="20,92,307,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumTask1Images" HorizontalAlignment="Left" Height="23" Margin="216,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="252"/>
+
+        <Label Content="Added Images: " Margin="20,158,353.4,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="imgList" HorizontalAlignment="Left" Height="305" Margin="20,189,0,0" VerticalAlignment="Top" Width="448"/>
+
 
     </Grid>
 </Window>
